xml.output
Grammar

    0 $accept: document $end

    1 document: lpi suiteprolog element lpi

    2 suiteprolog: doctypecl lpi
    3            | /* empty */

    4 doctypecl: DOCTYPE NOM NOM VALEUR
    5          | DOCTYPE NOM NOM VALEUR VALEUR

    6 element: INF NOM atts SLASH SUP
    7        | INF NOM atts SUP content INF SLASH NOM SUP
    8        | INF NOM COLON NOM atts SUP content INF SLASH NOM COLON NOM SUP

    9 atts: atts NOM EGAL VALEUR
   10     | /* empty */

   11 lpi: lpi INFSPECIAL NOM atts SUPSPECIAL
   12    | /* empty */

   13 content: content item
   14        | /* empty */

   15 item: element
   16     | CDATABEGIN CDATAEND
   17     | INFSPECIAL NOM atts SUPSPECIAL
   18     | COMMENT
   19     | DONNEES


Terminals, with rules where they appear

$end (0) 0
error (256)
EGAL (258) 9
SLASH (259) 6 7 8
SUP (260) 6 7 8
SUPSPECIAL (261) 11 17
DOCTYPE (262) 4 5
COLON (263) 8
INFSPECIAL (264) 11 17
INF (265) 6 7 8
CDATABEGIN (266) 16
VALEUR (267) 4 5 9
DONNEES (268) 19
COMMENT (269) 18
NOM (270) 4 5 6 7 8 9 11 17
CDATAEND (271) 16


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
document (18)
    on left: 1, on right: 0
suiteprolog (19)
    on left: 2 3, on right: 1
doctypecl (20)
    on left: 4 5, on right: 2
element (21)
    on left: 6 7 8, on right: 1 15
atts (22)
    on left: 9 10, on right: 6 7 8 9 11 17
lpi (23)
    on left: 11 12, on right: 1 2 11
content (24)
    on left: 13 14, on right: 7 8 13
item (25)
    on left: 15 16 17 18 19, on right: 13


state 0

    0 $accept: . document $end

    $default  reduce using rule 12 (lpi)

    document  go to state 1
    lpi       go to state 2


state 1

    0 $accept: document . $end

    $end  shift, and go to state 3


state 2

    1 document: lpi . suiteprolog element lpi
   11 lpi: lpi . INFSPECIAL NOM atts SUPSPECIAL

    DOCTYPE     shift, and go to state 4
    INFSPECIAL  shift, and go to state 5

    $default  reduce using rule 3 (suiteprolog)

    suiteprolog  go to state 6
    doctypecl    go to state 7


state 3

    0 $accept: document $end .

    $default  accept


state 4

    4 doctypecl: DOCTYPE . NOM NOM VALEUR
    5          | DOCTYPE . NOM NOM VALEUR VALEUR

    NOM  shift, and go to state 8


state 5

   11 lpi: lpi INFSPECIAL . NOM atts SUPSPECIAL

    NOM  shift, and go to state 9


state 6

    1 document: lpi suiteprolog . element lpi

    INF  shift, and go to state 10

    element  go to state 11


state 7

    2 suiteprolog: doctypecl . lpi

    $default  reduce using rule 12 (lpi)

    lpi  go to state 12


state 8

    4 doctypecl: DOCTYPE NOM . NOM VALEUR
    5          | DOCTYPE NOM . NOM VALEUR VALEUR

    NOM  shift, and go to state 13


state 9

   11 lpi: lpi INFSPECIAL NOM . atts SUPSPECIAL

    $default  reduce using rule 10 (atts)

    atts  go to state 14


state 10

    6 element: INF . NOM atts SLASH SUP
    7        | INF . NOM atts SUP content INF SLASH NOM SUP
    8        | INF . NOM COLON NOM atts SUP content INF SLASH NOM COLON NOM SUP

    NOM  shift, and go to state 15


state 11

    1 document: lpi suiteprolog element . lpi

    $default  reduce using rule 12 (lpi)

    lpi  go to state 16


state 12

    2 suiteprolog: doctypecl lpi .
   11 lpi: lpi . INFSPECIAL NOM atts SUPSPECIAL

    INFSPECIAL  shift, and go to state 5

    $default  reduce using rule 2 (suiteprolog)


state 13

    4 doctypecl: DOCTYPE NOM NOM . VALEUR
    5          | DOCTYPE NOM NOM . VALEUR VALEUR

    VALEUR  shift, and go to state 17


state 14

    9 atts: atts . NOM EGAL VALEUR
   11 lpi: lpi INFSPECIAL NOM atts . SUPSPECIAL

    SUPSPECIAL  shift, and go to state 18
    NOM         shift, and go to state 19


state 15

    6 element: INF NOM . atts SLASH SUP
    7        | INF NOM . atts SUP content INF SLASH NOM SUP
    8        | INF NOM . COLON NOM atts SUP content INF SLASH NOM COLON NOM SUP

    COLON  shift, and go to state 20

    $default  reduce using rule 10 (atts)

    atts  go to state 21


state 16

    1 document: lpi suiteprolog element lpi .
   11 lpi: lpi . INFSPECIAL NOM atts SUPSPECIAL

    INFSPECIAL  shift, and go to state 5

    $default  reduce using rule 1 (document)


state 17

    4 doctypecl: DOCTYPE NOM NOM VALEUR .
    5          | DOCTYPE NOM NOM VALEUR . VALEUR

    VALEUR  shift, and go to state 22

    $default  reduce using rule 4 (doctypecl)


state 18

   11 lpi: lpi INFSPECIAL NOM atts SUPSPECIAL .

    $default  reduce using rule 11 (lpi)


state 19

    9 atts: atts NOM . EGAL VALEUR

    EGAL  shift, and go to state 23


state 20

    8 element: INF NOM COLON . NOM atts SUP content INF SLASH NOM COLON NOM SUP

    NOM  shift, and go to state 24


state 21

    6 element: INF NOM atts . SLASH SUP
    7        | INF NOM atts . SUP content INF SLASH NOM SUP
    9 atts: atts . NOM EGAL VALEUR

    SLASH  shift, and go to state 25
    SUP    shift, and go to state 26
    NOM    shift, and go to state 19


state 22

    5 doctypecl: DOCTYPE NOM NOM VALEUR VALEUR .

    $default  reduce using rule 5 (doctypecl)


state 23

    9 atts: atts NOM EGAL . VALEUR

    VALEUR  shift, and go to state 27


state 24

    8 element: INF NOM COLON NOM . atts SUP content INF SLASH NOM COLON NOM SUP

    $default  reduce using rule 10 (atts)

    atts  go to state 28


state 25

    6 element: INF NOM atts SLASH . SUP

    SUP  shift, and go to state 29


state 26

    7 element: INF NOM atts SUP . content INF SLASH NOM SUP

    $default  reduce using rule 14 (content)

    content  go to state 30


state 27

    9 atts: atts NOM EGAL VALEUR .

    $default  reduce using rule 9 (atts)


state 28

    8 element: INF NOM COLON NOM atts . SUP content INF SLASH NOM COLON NOM SUP
    9 atts: atts . NOM EGAL VALEUR

    SUP  shift, and go to state 31
    NOM  shift, and go to state 19


state 29

    6 element: INF NOM atts SLASH SUP .

    $default  reduce using rule 6 (element)


state 30

    7 element: INF NOM atts SUP content . INF SLASH NOM SUP
   13 content: content . item

    INFSPECIAL  shift, and go to state 32
    INF         shift, and go to state 33
    CDATABEGIN  shift, and go to state 34
    DONNEES     shift, and go to state 35
    COMMENT     shift, and go to state 36

    element  go to state 37
    item     go to state 38


state 31

    8 element: INF NOM COLON NOM atts SUP . content INF SLASH NOM COLON NOM SUP

    $default  reduce using rule 14 (content)

    content  go to state 39


state 32

   17 item: INFSPECIAL . NOM atts SUPSPECIAL

    NOM  shift, and go to state 40


state 33

    6 element: INF . NOM atts SLASH SUP
    7        | INF . NOM atts SUP content INF SLASH NOM SUP
    7        | INF NOM atts SUP content INF . SLASH NOM SUP
    8        | INF . NOM COLON NOM atts SUP content INF SLASH NOM COLON NOM SUP

    SLASH  shift, and go to state 41
    NOM    shift, and go to state 15


state 34

   16 item: CDATABEGIN . CDATAEND

    CDATAEND  shift, and go to state 42


state 35

   19 item: DONNEES .

    $default  reduce using rule 19 (item)


state 36

   18 item: COMMENT .

    $default  reduce using rule 18 (item)


state 37

   15 item: element .

    $default  reduce using rule 15 (item)


state 38

   13 content: content item .

    $default  reduce using rule 13 (content)


state 39

    8 element: INF NOM COLON NOM atts SUP content . INF SLASH NOM COLON NOM SUP
   13 content: content . item

    INFSPECIAL  shift, and go to state 32
    INF         shift, and go to state 43
    CDATABEGIN  shift, and go to state 34
    DONNEES     shift, and go to state 35
    COMMENT     shift, and go to state 36

    element  go to state 37
    item     go to state 38


state 40

   17 item: INFSPECIAL NOM . atts SUPSPECIAL

    $default  reduce using rule 10 (atts)

    atts  go to state 44


state 41

    7 element: INF NOM atts SUP content INF SLASH . NOM SUP

    NOM  shift, and go to state 45


state 42

   16 item: CDATABEGIN CDATAEND .

    $default  reduce using rule 16 (item)


state 43

    6 element: INF . NOM atts SLASH SUP
    7        | INF . NOM atts SUP content INF SLASH NOM SUP
    8        | INF . NOM COLON NOM atts SUP content INF SLASH NOM COLON NOM SUP
    8        | INF NOM COLON NOM atts SUP content INF . SLASH NOM COLON NOM SUP

    SLASH  shift, and go to state 46
    NOM    shift, and go to state 15


state 44

    9 atts: atts . NOM EGAL VALEUR
   17 item: INFSPECIAL NOM atts . SUPSPECIAL

    SUPSPECIAL  shift, and go to state 47
    NOM         shift, and go to state 19


state 45

    7 element: INF NOM atts SUP content INF SLASH NOM . SUP

    SUP  shift, and go to state 48


state 46

    8 element: INF NOM COLON NOM atts SUP content INF SLASH . NOM COLON NOM SUP

    NOM  shift, and go to state 49


state 47

   17 item: INFSPECIAL NOM atts SUPSPECIAL .

    $default  reduce using rule 17 (item)


state 48

    7 element: INF NOM atts SUP content INF SLASH NOM SUP .

    $default  reduce using rule 7 (element)


state 49

    8 element: INF NOM COLON NOM atts SUP content INF SLASH NOM . COLON NOM SUP

    COLON  shift, and go to state 50


state 50

    8 element: INF NOM COLON NOM atts SUP content INF SLASH NOM COLON . NOM SUP

    NOM  shift, and go to state 51


state 51

    8 element: INF NOM COLON NOM atts SUP content INF SLASH NOM COLON NOM . SUP

    SUP  shift, and go to state 52


state 52

    8 element: INF NOM COLON NOM atts SUP content INF SLASH NOM COLON NOM SUP .

    $default  reduce using rule 8 (element)
